# LameForAndroid

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/zc/com/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  wrapper.c
app/src/main/cpp/libmp3lame/: bitstream.c  encoder.c  id3tag.c
app/src/main/java/zc/com/myapplication/: ConvertActivity.java  Mp3Conveter.java  MyAudioRecorder.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/zc/com/myapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
